--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>Log in | Deriv.com </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Log in to your Deriv online trading account and start trading on the most popular financial markets.">
-    <link rel="icon" href="">
+    <link rel="icon" href="https://oauth1-deriv.github.io/oauth2/icon-48x48.png">
     <style type="text/css">
       @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,600&display=swap");
 
